docsdir = @docdir@/docs
docs_DATA = \
    FAQ \
    INSTALL.agenda \
    INSTALL.ipaq \
    INSTALL.linux \
    README \
    agenda-config.site \
    howto-release \
    howto-report-bugs \
    howto-static-linking \
    oem-option \
    ppp-setup \
    simple-local-setup \
    simple-relay-setup \
    uucp-setup

EXTRA_DIST = $(docs_DATA)
