in_man = \
	masqmail.8.in \
	mservdetect.1.in \
	masqmail.aliases.5.in \
	masqmail.conf.5.in \
	masqmail.route.5.in \
	rmail.8.in

# don't forget to update AC_CONFIG_FILES in configure.ac!
man_MANS = \
	masqmail.8 \
	mservdetect.1 \
	masqmail.aliases.5 \
	masqmail.conf.5 \
	masqmail.route.5 \
	rmail.8

EXTRA_DIST = $(in_man)
