TESTS = \
	t100-local-localhost.sh \
	t101-local-hostname.sh \
	t110-remote.sh \
	t120-mailhost-localhost.sh \
	t121-mailhost-hostname.sh \
	t130-remote-wrapper.sh \
	t131-remote-pipe.sh \
	t132-local-mda.sh \
	t140-queued.sh \
	t150-queued-remote-multi.sh \
	t160-partially-delayed.sh \
	t200-stdin-no-oi.sh \
	t201-stdin-with-oi.sh \
	t210-stdin-t.sh \
	t300-direct-bounce.sh \
	t310-warn-bounce.sh \
	t400-aliases.sh \
	t410-botched-aliases.sh \
	t420-aliases-partially-delayed.sh \
	t500-rewriting.sh \
	t501-domain-rewriting.sh

EXTRA_DIST = \
	lib.sh \
	$(TESTS)
